js/src/tests/test262/language/import/import-defer/errors/get-self-while-evaluating-async/dep_FIXTURE.js
import
defer
*
as
ns
from
"
.
/
dep_FIXTURE
.
js
"
;
await
Promise
.
resolve
(
0
)
;
try
{
ns
.
foo
;
}
catch
(
error
)
{
globalThis
[
"
error
on
ns
.
foo
"
]
=
error
;
}
